--- a/index.html
+++ b/index.html
@@ -1,3 +1,190 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Save the koala</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- falta font -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+</head>
+<body>
+	<!-- navbar -->
+<!--<div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+
+
+          				<nav nav class="navbar navbar-fixed-top">
+					 <div class="container-fluid">
+					 <div class="navbar-header">
+                    	<button type="button" class="navbar-toggle collapsed" data-toogle="collapse">
+	                        <span class="sr-only">Toggle navigation</span>
+	                        <span class="icon-bar"></span>
+	                        <span class="icon-bar"></span>
+	                        <span class="icon-bar"></span>
+                    	</button> -->
+	<section  class="back-portada-koala" class="img-responsive">		
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+    	<section class="first-section">
+	        <nav class="navbar navbar-inverse navbar-fixed-top" id="elemento-superior">
+	            <div class="container-fluid">
+	                <div class="navbar-header">
+	                    <button type="button" class="navbar-toggle collapsed" data-toogle="collapse">
+	                        <span class="sr-only">Toggle navigation</span>
+	                        <span class="icon-bar"></span>
+	                        <span class="icon-bar"></span>
+	                        <span class="icon-bar"></span>
+	                    </button>
+	                </div>
+	                <div class="navbar-collapse collapse">
+	                    <ul class="nav navbar-nav navbar-right">
+	                        <li><a href="#sumo">Sumo</a></li>
+	                        <li><a href="#features">Features</a></li>
+	                        <li><a href="#download">Download</a></li>	                        
+	                    </ul>
+	                </div>
+	            </div>	                
+	        </nav>
+        <div class="row"></div>
+		</div>		
+			<div class="container" id="texto1">	
+				<div class="row"> 
+					<div  class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-offset-4">
+						<h1 class="parrafo1" id="letters1">Save The Koala</h1>
+						<p id="letters1" >Koalas are declining in rapid numbers because the trees where they spend amajority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past.</p>
+						<button type="button" class="btn">See more</button>
+					</div>
+
+				</div>
+			</div>
+	</section>
+	<section class="second-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 ">
+					<img id="picture1" class="img-responsive" src="img/tres.jpg" alt="placeholder+image">			
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 ">
+					<h4>FOUNDATION INFORMATION</h4>
+					<h1>Koalas are cute but they're also under threat in their Aussie homeland!</h1>
+					<p>Koalas are well-known as an icon of Australia and many people who visit Australia as tourists hope to see and hold a koala. But it's less well known that koalas in the wild are facing unprecedented pressure as their trees are cleared, existing habitat becomes more vulnerable and isolated and more roads bisect their territories resulting in more koalas being run over.</p>
+
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
+								<h1>The Australian Koala Foundation</h1>
+								<p>AKF is the organisation dedicated to ‘saving the koala’. The AKF’s mission is to achieve the long-term conservation of koalas and their habitat and to diminish current and future threats to koalas in the wild. See more</p>
+						</div>
+						<div class="row">
+							<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
+								<h1>AKF Vision</h1>
+								<p>The AKF’s vision includes a National Koala Act to provide solutions for managing koalas across all land tenures and setting a national standard for mapping koala habitat across its range so that conservation efforts on the ground can be maximised.See more</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>				
+	</section>
+	<section class="third-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 ">
+					<h5>EASY HELP</h5>
+					<h1>Save Koalas From Possible Extinction!</h1>
+					<p>Loss of koala habitat is the major threat facing koalas today. Since white settlement of Australia, roughly 80% of the koala’s habitat has been destroyed and of what remains, most occurs on privately owned land and almost none is protected.</p>
+					<button type="button" class="btn">See more</button>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 ">
+					<img id="picture2" class="img-responsive" src="img/cosita.jpg" alt="koalito">			
+				</div>				
+			</div>			
+		</div>
+	</section>
+	<section class="four-section" id="fondo-koala3" class="img-responsive">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 col-md-offset-6" class="letters3">
+					<h5 id="letters3">HELP KOALAS</h5>
+					<h1 id="letters3">“No Tree... No Me”</h1>
+					<p id="letters3">Dick Marks, AKF’s creative supporter</p>
+				</div>			
+			</div>			
+		</div>
+	</section>
+	<section class="five-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-md-offset-4">					
+					<h4 id="letters4">It’s not hard to see how we can help.</h4>
+				</div>			
+			</div>	
+			<div class="row" class="parrafos">
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+					<p id="letters4">There are many people who are working very hard to achieve the conservation of the koala and you can join them by visiting www.savethekoala.com.</p>
+				</div>	
+				<div class="row" class="parrafos">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+						<p id="letters4">The only way to save koalas is to save their habitat, the eucalyptus forests where they live, and which they must have to survive. This is what the Australian Koala Foundation is trying to achieve.</p>
+					</div>
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+							<p id="letters4">But they can't do it alone and they need the help of people like you. You may think that just one person cannot make any difference in helping koalas or in helping our environment generally, but if each person does even one little thing to help, it can add up to a lot of help.</p>
+						</div>			
+				</div>			
+			</div>
+		</div>
+	</section>
+
+
+
+<!--
+
+		<div class="row">
+	    <section class="first-section">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+	            <div class="container-fluid">
+	                <div class="navbar-collapse collapse">
+	                    <ul class="nav navbar-nav navbar-right">
+	                        <li><a href="#sumo">Foundation</a></li>
+	                        <li><a href="#features">Koala</a></li>
+	                        <li><a href="#download">Donate</a></li>
+	                        
+	                    </ul>
+	                </div>
+	            </div>
+        </div>       
+        </nav>
+        <div class="container" id="sumo">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <h1>LANDING SUMO</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-offset-5 col-md-2 col-xs-offset-3 col-xs-6">
+                    <div class="line"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <h3 id="showApp">SHOW YOUR APP WITH STYLE</h3>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+</body>
+</html>
+
 <!-- Seccion bienvenida
 Save The Koala
 Koalas are declining in rapid numbers because the trees where they spend a majority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past. -->
