--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 	<!-- navbar -->
 	<section  class="back-portada-koala" class="img-responsive">		
 		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-    	<section class="first-section">
+		<div class="col-lg-6 col-md-6 col-xs-12">
 	        <nav class="navbar navbar-inverse navbar-fixed-top" id="elemento-superior">
 	            <div class="container-fluid">
 	                <div class="navbar-header">
@@ -27,8 +26,8 @@
 	                    </button>
 	                </div>
 	                <div class="navbar-collapse collapse">
-	                				<ul class="nav navbar-nav navbar-left" id="save-koala">
-	                    				<li><a id="letters5" href="#sumo">Save The Koala</a></li>
+	                	<ul class="nav navbar-nav navbar-left" id="save-koala">
+	                    	<li><a id="letters5" href="#sumo">Save The Koala</a></li>
 	                    </ul>
 	                    <ul class="nav navbar-nav navbar-right" id="save-koa">
 	                        <li><a id="letters5" href="#sumo">Foundation</a></li>
@@ -38,44 +37,43 @@
 	                </div>
 	            </div>	                
 	        </nav>
-        <div class="row"></div>
-		</div>		
-			<div class="container" id="texto1">	
+	    </div>	
+        <div class="row"></div>			
+			<div class="container-fluid" id="texto1">	
 				<div class="row"  id="row3"> 
-					<div  class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-offset-4">
+					<div  class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-offset-12">
 						<h1 class="parrafo1" id="letters1">Save The Koala</h1>
 						<p id="letters1" >Koalas are declining in rapid numbers because the trees where they spend amajority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past.</p>
 						<button type="button" class="btn">See more</button>
 					</div>
-
 				</div>
 			</div>
 	</section>
 
 	<section class="second-section">
-		<div class="container">
-			<div class="row"  id="row4">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 ">
+		<div class="container-fluid">
+			<div class="row"  id="row4"> <!-- -->
+				<div class="col-lg-6 col-md-6 hidden-sm hidden-xs">
 					<img id="picture1" class="img-responsive" src="img/tres.jpg" alt="placeholder+image">			
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" id="row2">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="row2">
 					<h4 id="parrafo2" >FOUNDATION INFORMATION</h4>
 					<h3 id="letters6">Koalas are cute but they're also under threat in their Aussie homeland!</h3>
 					<p>Koalas are well-known as an icon of Australia and many people who visit Australia as tourists hope to see and hold a koala. But it's less well known that koalas in the wild are facing unprecedented pressure as their trees are cleared, existing habitat becomes more vulnerable and isolated and more roads bisect their territories resulting in more koalas being run over.</p>
 
 				</div>
-				<div class="container">
+				<div class="container-fluid">
 					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
+						<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 ">
 								<h3 id="letters6">The Australian Koala Foundation</h3>
 								<p>AKF is the organisation dedicated to ‘saving the koala’. The AKF’s mission is to achieve the long-term conservation of koalas and their habitat and to diminish current and future threats to koalas in the wild. See more</p>
 						</div>
-						<div class="row">
-							<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 ">
+<!--						<div class="row">-->
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 ">
 								<h3 id="letters6">AKF Vision</h3>
 								<p>The AKF’s vision includes a National Koala Act to provide solutions for managing koalas across all land tenures and setting a national standard for mapping koala habitat across its range so that conservation efforts on the ground can be maximised.See more</p>
 							</div>
-						</div>
+<!--					</div> -->
 					</div>
 				</div>
 			</div>
@@ -83,15 +81,15 @@
 	</section>
 
 	<section class="third-section">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row" id="row5">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 ">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
 					<h5>EASY HELP</h5>
 					<h3>Save Koalas From Possible Extinction!</h3>
 					<p id="letters5">Loss of koala habitat is the major threat facing koalas today. Since white settlement of Australia, roughly 80% of the koala’s habitat has been destroyed and of what remains, most occurs on privately owned land and almost none is protected.</p>
 					<button type="button" class="btn">Read More</button>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 ">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
 					<img id="picture2" class="img-responsive" src="img/cosita.jpg" alt="koalito">			
 				</div>				
 			</div>			
@@ -99,9 +97,9 @@
 	</section>
 
 	<section class="four-section" id="fondo-koala3" class="img-responsive">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row" id="row6">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-md-offset-10" class="letters3">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-md-offset-10" class="letters3">
 					<h5 id="letters3">HELP KOALAS</h5>
 					<h1 id="letters3">“No Tree... No Me”</h1>
 					<p id="letters3">Dick Marks, AKF’s creative supporter</p>
@@ -110,24 +108,24 @@
 		</div>
 	</section>
 
-	<section class="five-section">
-		<div class="container">
-			<div class="row" id="row7">
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-md-offset-4">					
+	<section class="five-section" id="row7">
+		<div class="container-fluid">
+			<div class="row" >
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-md-offset-4">					
 					<h4 id="letters4">It’s not hard to see how we can help.</h4>
 				</div>			
 			</div>	
 			<div class="row" class="parrafos">
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ">
 				<span class="glyphicon glyphicon-heart"></span>
 					<p id="letters4">There are many people who are working very hard to achieve the conservation of the koala and you can join them by visiting www.savethekoala.com.</p>
 				</div>	
 				<div class="row" class="parrafos">
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ">
 					<span class="glyphicon glyphicon-globe x3"></span>
 						<p id="letters4">The only way to save koalas is to save their habitat, the eucalyptus forests where they live, and which they must have to survive. This is what the Australian Koala Foundation is trying to achieve.</p>
 					</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ">
 						<span class="glyphicon glyphicon-dog"></span>
 						<i class="fa fa-paw" aria-hidden="true"></i>
 							<p id="letters4">But they can't do it alone and they need the help of people like you. You may think that just one person cannot make any difference in helping koalas or in helping our environment generally, but if each person does even one little thing to help, it can add up to a lot of help.</p>
@@ -138,9 +136,9 @@
 	</section>
 
 
-<section class="six-section">
-        <div class="container">
-            <div class="row">
+<section class="six-section" id="row10">
+        <div class="container-fluid">
+            <div class="row" >
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                 <h3>It's not hard to see how we can help</h3>    
                 </div>
@@ -182,14 +180,12 @@
             </div>
         </div>
     </section>
-    <section>
-
 
 
 <footer class="seven-section">
-			<div class="container">
+			<div class="container-fluid">
 			<div class="row" id="row9">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 					<h6 id="letters6">ABOUT</h6>					
 					<p id="letters5">The Australian Koala Foundation receives no funding from any government so they rely on people like you to help raise funds for their important work in saving koalas for future generations to enjoy. If you’d like to learn more, contact us anytime at .</p>
 					<h6 id="letters6">akf@savethekoala.com.</h6>
