Desarrollando estilos en css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 					<div  class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-offset-12">
 						<h1 class="parrafo1" id="letters1">Save The Koala</h1>
 						<p id="letters1" >Koalas are declining in rapid numbers because the trees where they spend amajority of their time are being quickly chopped down. Activists need to take action to try and protect these animals’ habitats so they do not become a thing of the past.</p>
-						<button type="button" class="btn">See more</button>
+						<!--Boton buscado en bootstrap para el desarrollo de html-->
+						<a href="#" class="btn btn-primary btn-success">See more</a>
 					</div>
 				</div>
 			</div>
@@ -84,10 +85,10 @@
 		<div class="container-fluid">
 			<div class="row" id="row5">
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
-					<h5>EASY HELP</h5>
+					<h5 id="letters3">EASY HELP</h5>
 					<h3>Save Koalas From Possible Extinction!</h3>
 					<p id="letters5">Loss of koala habitat is the major threat facing koalas today. Since white settlement of Australia, roughly 80% of the koala’s habitat has been destroyed and of what remains, most occurs on privately owned land and almost none is protected.</p>
-					<button type="button" class="btn">Read More</button>
+					<a href="#" class="btn btn-primary btn-success">Read More</a>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
 					<img id="picture2" class="img-responsive" src="img/cosita.jpg" alt="koalito">			
@@ -110,7 +111,7 @@
 
 	<section class="five-section" id="row7">
 		<div class="container-fluid">
-			<div class="row" >
+			<div class="row" id="row-title">
 				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-md-offset-4">					
 					<h4 id="letters4">It’s not hard to see how we can help.</h4>
 				</div>			
@@ -126,8 +127,7 @@
 						<p id="letters4">The only way to save koalas is to save their habitat, the eucalyptus forests where they live, and which they must have to survive. This is what the Australian Koala Foundation is trying to achieve.</p>
 					</div>
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ">
-						<span class="glyphicon glyphicon-dog"></span>
-						<i class="fa fa-paw" aria-hidden="true"></i>
+						<i class="fa fa-paw" aria-hidden="true" id="size"></i>
 							<p id="letters4">But they can't do it alone and they need the help of people like you. You may think that just one person cannot make any difference in helping koalas or in helping our environment generally, but if each person does even one little thing to help, it can add up to a lot of help.</p>
 						</div>			
 				</div>			
@@ -152,7 +152,7 @@
                         <p>1 T-shirt</p>
                         <p>1 visit per month</p>
                         <p>PublicAPI access</p>
-                        <a class="btn btn-verde btn-lg" href="#">DONATE</a>
+                        <a href="#" class="btn btn-primary btn-success">DONATE</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center donate1">
@@ -163,7 +163,7 @@
                         <p>2 T-shirt</p>
                         <p>2 visit per month</p>
                         <p>PublicAPI access</p>
-                        <a class="btn btn-verde btn-lg" href="#">DONATE</a>
+                        <a href="#" class="btn btn-primary btn-success">DONATE</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center donate1">
@@ -174,7 +174,7 @@
                         <p>3 T-shirt</p>
                         <p>3 visit per month</p>
                         <p>PublicAPI access</p>
-                        <a class="btn btn-verde btn-lg" href="#">DONATE</a>
+                        <a href="#" class="btn btn-primary btn-success">DONATE</a>
                     </div>
                 </div>
             </div>
